test/files/neg/macro-invalidusage-badtargs-c/Macros_Test_2.scala
object Macros {
  def foo[T[_]](x: Int) = macro Impls.foo
}

object Test extends App {
  import Macros._
  val s: String = foo[String](42)
}